# spectre

./: ApplyBoundaryFluxesGlobalTimeStepping_8hpp_source.html  ApplyMatrices_8hpp_source.html  Blas_8hpp_source.html  Blaze_8hpp_source.html  BlockNeighbor_8hpp_source.html  CMakeLists.txt  Characteristics_8hpp_source.html  CheckWithRandomValues_8hpp_source.html  ComputeGhQuantities_8hpp_source.html  ComputeNonconservativeBoundaryFluxes_8hpp_source.html  ComputeVolumeDuDt_8hpp_source.html  ComputeVolumeFluxes_8hpp_source.html  ConservativeDuDt_8hpp_source.html  ConstantExpressions_8hpp_source.html  CoordinateMap_8hpp_source.html  CurvedScalarWave_2Equations_8hpp_source.html  CurvedScalarWave_2System_8hpp_source.html  DarkEnergyFluid_8hpp_source.html  Dat_8hpp_source.html  DataBoxHelpers_8hpp_source.html  DataBoxTag_8hpp.html  DataBoxTag_8hpp_source.html  DataBox_8hpp_source.html  DataVector_8hpp.html  DataVector_8hpp_source.html  DefiniteIntegral_8hpp.html  DefiniteIntegral_8hpp_source.html  DgElementArray_8hpp_source.html  DiscreteRotation_8hpp_source.html  Divergence_8hpp.html  Divergence_8hpp_source.html  DivideBy_8hpp_source.html  DomainHelpers_8hpp.html  DomainHelpers_8hpp_source.html  Domain_2Tags_8hpp.html  Domain_2Tags_8hpp_source.html  Domain_8hpp_source.html  EquationOfState_8hpp_source.html  Evolution_2Conservative_2Tags_8hpp_source.html  Evolution_2Systems_2CurvedScalarWave_2Tags_8hpp_source.html  (+193 more)
cmake/: SpectreSetupPython.cmake
doc_coverage/: index-sort-l.html  index.html
doc_coverage/ApparentHorizons/: FastFlow.cpp.gcov.html  FastFlow.hpp.gcov.html  SpherepackIterator.hpp.gcov.html  Strahlkorper.hpp.gcov.html  StrahlkorperDataBox.hpp.gcov.html  StrahlkorperGr.cpp.gcov.html  YlmSpherepack.cpp.gcov.html  YlmSpherepack.hpp.gcov.html  index-sort-l.html  index.html
doc_coverage/ControlSystem/: FunctionOfTime.hpp.gcov.html  PiecewisePolynomial.hpp.gcov.html  (+4 more)
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  files_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_2.js  (+14 more)
src/Executables/Examples/Sphere/: CMakeLists.txt  SphereCreate.cpp
src/Executables/Examples/XdmfOutput/: ApplyObservers.cpp  ApplyObservers.hpp  CMakeLists.txt  XdmfOutput1D.cpp  XdmfOutput2D.cpp
src/IO/H5/Python/: Bindings.cpp  CMakeLists.txt  Dat.cpp  File.cpp
unit-test-coverage/: index-sort-f.html  index-sort-l.html  index.html
(+1501 files in other folders)
